--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 * {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
+}
+html {
+  overflow-x: hidden;
 }
 body {
   background-color: #006c67;
+  /* width: 100%; */
+  overflow-x: hidden;
 }
 /* Header */
 .header {
   background-color: #21295c;
   height: 100px;
   justify-content: center;
+  /* width: 100%; */
 }
 
 .header_div_centralizada {
@@ -21,6 +27,7 @@ body {
   /* background-color: green; */
   height: 100px;
   display: flex;
+  /* flex-direction: row; */
   justify-content: flex-end;
   align-items: center;
 }
@@ -32,7 +39,7 @@ body {
 
 .acoes_div {
   /* background-color: pink; */
-  height: 200px;
+  height: 240px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -47,9 +54,26 @@ body {
   justify-content: center;
   align-items: center;
 }
+.acao_div_centralizada_form {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
 
+  margin: 0px 10px 10px 10px;
+}
+.acao_div_centralizada_form_input {
+  margin-bottom: 2px;
+  /* background-color: blue; */
+  width: 100%;
+}
+.acoes_div_centralizada_select_div {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-top: 10px;
+}
 .acoes_div_centralizada_select {
-  width: 300px;
+  /* width: 100%; */
   border-radius: 6px;
 }
 
@@ -116,16 +140,16 @@ body {
 
 @media (max-width: 1182px) {
   .grid {
-    grid-template-columns: 100px 100px 100px 100px;
+    grid-template-columns: 100%;
   }
   .caixa {
-    width: 100px;
-    height: 200px;
+    width: 100%;
+    height: 300px;
     background-color: #00c49a;
   }
   .caixa_img_container {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 200px;
   }
   .caixa_img {
   }
